# ai_coach

./: .env.example  .gitignore  CLAUDE.md  README.md  agent.py  app.py  config.py  database.py  download_fonts.py  metrics.py  models.py  pdf_export.py  pyproject.toml  requirements.txt  rufler_flow.yml  services.py  tools.py
Diploma/: AI Coach — Обзор проекта.md
Diploma/.obsidian/: workspace.json
diplom_last_v/: .gitignore  README.md  requirements.txt  run.py  skills-lock.json
diplom_last_v/app/: __init__.py  config.py  main.py
diplom_last_v/app/bot/: __init__.py  keyboards.py  main.py  middlewares.py  pdf_utils.py  states.py  utils.py
diplom_last_v/app/core/: __init__.py  agent.py  metrics.py  prompts.py
diplom_last_v/app/db/: __init__.py  database.py  models.py  repo.py
diplom_last_v/description/: 00_init_файлы.md  01_run.md  02_main.md  03_config.md  04_bot_main.md  05_states.md  06_middlewares.md  07_keyboards.md  08_utils.md  09_handlers_common.md  10_handlers_athlete.md  11_handlers_coach.md  12_handlers_poll.md  13_handlers_training_log.md  14_handlers_payments.md  15_handlers_strava.md  16_handlers_agent_chat.md  17_core_agent.md  18_core_metrics.md  19_core_prompts.md  20_db_database.md  21_db_models.md  22_db_repo.md  23_integrations_strava.md  24_integrations_payments.md  25_scheduler_jobs.md  26_webapp_server.md  27_tests.md  README.md
diplom_last_v/docs/: gen_chapter1.py  Глава_1.docx
diplom_last_v/tests/: test_core_metrics.py
tests/: __init__.py  conftest.py  test_agent.py  test_database.py  test_integration.py  test_models.py
(+19 files in other folders)
